--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -78,6 +78,15 @@ a.nav-link:hover
     
 }
 
+/* BOUTON GÉNÉRAL */  
+.button {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 23px;
+    align-items: center;
+}
+
 /*LOGIN PAGE*/
 
 /* TITRE LOGIN PAGE */
@@ -227,29 +236,14 @@ p {
     margin-top: 50px!important;
     margin-bottom: 50px!important;
 }
-/* ??? */
+/* IMAGE DU COVID */
 .logo{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100px;
     height: 100px; 
+    margin-bottom: 55px;
 }
-
-/* ??? */
-.title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
-    padding-block-end: 30px;
-    border-width: 4px;
-   }
    
-/* ??? */  
-.button {
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
-    align-items: center;
-   }
+
